5.0.0 (preliminary)

- Runtime system
  - Added support for the full numeric tower, including various new
    procedures taken from the "numbers" egg.  All calculations will
    now return exact numbers where possible, so code relying on flonums
    being returned may need to be changed if rational numbers do not
    provide the desired performance.

- Compiler
  - Fixed an off by one allocation problem in generated C code for (list ...).
  - The "-scrutinize" compiler option has been removed.
  - The "-module" compiler option (aliased as "-m") now expects a module name.

- Tools
  - The new "-link" option to csc allows linking with objects from extensions.

- Core libraries
  - Removed support for memory-mapped files (posix), queues
    (data-structures), binary-search (data-structures), scan-input-lines
    (utils), group-information (posix) and object-eviction (lolevel).
    These are now available as eggs.
  - Removed the srfi-1, srfi-13, srfi-14, srfi-18 and srfi-69 units.
    These are now available as eggs.
  - Added the `executable-pathname` procedure for retrieving a path to
    the currently-running executable.
  - Removed all support for SWIG.
  - `sleep` now suspends the current thread when threading is enabled,
    otherwise it sleeps the process. The new `process-sleep` procedure
    in unit posix can be used to sleep the process unconditionally.
  - `with-error-output-to-port' from the ports module has been renamed
    to the more common `with-error-to-port', and `with-error-to-string'
    has been added for completeness (thanks to Michael Silver).

- Module system
  - The compiler has been modularised, for improved namespacing.  This
    means names from the compiler should not leak out into the compiled
    program's (macro) namespace anymore.
  - The core units have been converted to modules under the "chicken"
    namespace.
  - Added support for list-style library names.

- Syntax expander